# ober

./: .gitignore  CLAUDE.md  CONSTITUTION-DEV.md  Cargo.toml  README.md  ROADMAP.md  TESTING.md  about.hbs  about.toml  flake.nix  ober.config.example.ron  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: beatgrid.rs  lib.rs
crates/analysis/tests/: bpm_corpus.rs
crates/app/: Cargo.toml
crates/app/src/: browser.rs  fonts.rs  hud.rs  main.rs  panel.rs  picker.rs  power.rs  theme.rs  vu.rs  waveform.rs  widgets.rs
crates/app/src/shaders/: vu.wgsl  waveform.wgsl
crates/decode/: Cargo.toml
crates/decode/src/: lib.rs  resample.rs
crates/decode/tests/: decode_wav.rs
crates/engine/: Cargo.toml
crates/engine/benches/: callback.rs
crates/engine/examples/: audio-probe.rs
crates/engine/src/: command.rs  graph.rs  jog.rs  lib.rs  snapshot.rs  stream.rs  track.rs
crates/engine/src/dsp/: biquad.rs  eq.rs  hermite.rs  mod.rs  softclip.rs
crates/engine/tests/: cue_point.rs  dsp_chain.rs  jog_scratch.rs  offline_render.rs
crates/mapping/: Cargo.toml
crates/mapping/src/: lib.rs
crates/midi/: Cargo.toml
crates/midi/src/: feedback.rs  io.rs  lib.rs  route.rs  translate.rs
docs/: SPECS.md  latence.md  latency.md
mappings/: hercules_inpulse_200_mk2.ron  pioneer_ddj_400.ron
scripts/: check-bevy-boundary.sh
