[package]
name = "mapping"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Format de mapping contrôleur déclaratif (RON) : types, chargement, validation."

[dependencies]
serde.workspace = true
ron.workspace = true
thiserror.workspace = true

[lints]
workspace = true
