[package]
name = "midi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "I/O MIDI (midir), moteur de mapping générique, feedback LED. Aucune dépendance Bevy."

[dependencies]
midir.workspace = true
crossbeam-channel.workspace = true
mapping.workspace = true
thiserror.workspace = true
anyhow.workspace = true # binaire midi-probe uniquement

[[bin]]
name = "midi-probe"
path = "src/bin/midi_probe.rs"

[lints]
workspace = true
